# hatley-pirbhai

./: .gitignore  LICENSE  PLAN.md  README.md
toolkit/: ARCH_DESIGN.md  BOUNDED_CONTEXTS_DESIGN.md  EMBEDDED_FIRMWARE_TUNING_DESIGN.md  HIERARCHICAL_INGEST_DESIGN.md  INGEST_DESIGN.md  INGEST_TUNING_DESIGN.md  MODERNIZATION_DESIGN.md  MODERNIZATION_TACTICS.md  PORTAL_DESIGN.md  PSPEC_DESIGN.md  README.md  SYSTEM_OF_SYSTEMS_DESIGN.md  TUTORIAL.md  bootstrap.sh  pyproject.toml
toolkit/hp_toolkit/: __init__.py  contract.py  load.py  model.py  status.py  validate.py
toolkit/hp_toolkit/ingest/: __init__.py  architecture_candidates.py  boundary_candidates.py  compose_parser.py  dockerfile_parser.py  docs_walker.py  embedded_arch_extractor.py  emit_dictionary.py  external_context.py  glossary_extractor.py  hints.py  (+14 more)
toolkit/reference/: HP_QUICK_REF.md
toolkit/scripts/: check_dictionary.py  hp_ingest.py  hp_init.py  render_dogfood.py  render_project.py
toolkit/skills/: README.md  hp-audit.md  hp-capture-adr.md  hp-confirm-naming.md  hp-frame-concept-format.md  hp-frame.md  hp-ingest-architect.md  hp-ingest-boundary.md  hp-ingest-glossary.md  hp-ingest-leaf.md  hp-ingest-processes.md  hp-ingest-review.md  hp-ingest-scan.md  hp-ingest.md  hp-init.md  hp-propose-architecture.md  hp-propose-bounded-contexts.md  hp-propose-budgets-and-tpms.md  hp-propose-context.md  hp-propose-contract.md  hp-propose-cspec.md  hp-propose-decomp.md  hp-propose-observability.md  hp-propose-pspec.md  hp-propose-slos.md  hp-propose-threat-model.md  hp-render.md  hp-status.md  hp-validate.md
(+80 files in other folders)
